Correct alignment of the sidebar icons

--- a/style.css
+++ b/style.css
@@ -41,12 +41,6 @@ button {
     border: 0;
 }
 
-li {
-    list-style: none;
-    padding: 10px;
-
-}
-
 .container {  
     width: calc(100vw - (100vw - 100%));
     height: calc(100vh - (100vh - 100%));
@@ -105,7 +99,7 @@ li {
     align-items: center;
 }
 
-.svg-profile {
+.svg-profile-pic {
     margin: 5px;
     display: block;
     width: 50px;
@@ -158,23 +152,33 @@ button h2 {
 .sidebar-header {
     font-size: 1rem;
     font-weight: bolder;
-    
-
 }
 
-.sidebar-links > ul {
+.sidebar-links {
+    display: flex;
+    flex-direction: column;
+    
+    gap: 5px;
+    
+}
+
+.sidebar-text {
+    margin: 5px;
     font-weight: bold;
     font-size: 20px;
 
     display: flex;
-    flex-direction: column;
-    
-    
+    flex-direction: row;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .sidebar-footer {
+    margin: 5px;
     font-weight: bold;
     font-size: 20px;
+
 }
 
 .content {
@@ -184,64 +188,64 @@ button h2 {
 
 .svg-home {
     margin: 5px;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background: url(img/home.svg);
 }
 
 .svg-profile {
     margin: 5px;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background: url(img/profile.svg);
 }
 
 .svg-messages {
     margin: 5px;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background: url(img/message.svg);
 }
 
 .svg-history {
     margin: 5px;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background: url(img/history.svg);
 }
 
 .svg-tasks {
     margin: 5px;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background: url(img/tasks.svg);
 }
 
 .svg-groups {
     margin: 5px;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background: url(img/group.svg);
 }
 
 .svg-settings {
     margin: 5px;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background: url(img/settings.svg);
 }
 
 .svg-support {
     margin: 5px;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background: url(img/support.svg);
 }
 
 .svg-cookies {
     margin: 5px;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background: url(img/cookie.svg);
 }
 
